--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </div>
         </section>
         <!-- Чем мы занимаемся -->
-        <section class="section">
+        <!-- <section class="section">
             <div class="container">
                 <h2 class="section-title mobile-no-text">Чем мы занимаемся</h2>
                 <ul class="img-works list">
@@ -137,9 +137,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- Наша команда -->
-        <section class="section center team no-padding-bottom">
+        <!-- <section class="section center team no-padding-bottom">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="section-names list">
@@ -285,7 +285,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!-- Постоянные клиенты -->
         <!-- <section class="section center">
             <div class="container">
